# engzee_ecg_detector

./: CMakeLists.txt  Makefile  README.md  compare_cpp_and_python_detector.py  demo.cpp  engzee.h  plot_hr.py  test_fir  test_fir.cpp
